--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,13 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4318
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4318/v1/traces
       - OTEL_EXPORTER_OTLP_INSECURE=true
-      - OTEL_TRACES_EXPORTER=console
     depends_on:
       - jaeger
 
   jaeger:
-    image: jaegertracing/jaeger:latest
+    image: jaegertracing/jaeger:2.14.1
     ports:
       - "16686:16686"  # Jaeger UI
       - "4317:4317"    # OTLP gRPC receiver
