--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "opentelemetry-instrumentation-fastapi>=0.60b1",
     "opentelemetry-exporter-otlp>=1.39.1",
     "python-json-logger>=4.0.0",
+    "asyncpg>=0.29.0",
+    "psycopg[binary]>=3.2.1",
 ]
 
 [project.optional-dependencies]
@@ -22,11 +24,15 @@ dev = [
     "pytest-asyncio>=1.3.0",
     "httpx>=0.22.0",
     "ruff>=0.14.14",
+    "alembic>=1.13.2",
 ]
 
 [build-system]
 requires = ["setuptools>=80.10.2"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["foreman"]
 
 [tool.ruff]
 line-length = 100
