--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.8'
 services:
   foreman:
     build: .
+    env_file:
+      - ./.env.foreman
     ports:
       - "8000:8000"
     environment:
